# pydigital

./: LICENSE  README.md  linecoding.ipynb  linecoding.py  paper.md  parity_generation.py  pyproject.toml  requirements.txt
src/pydigital/: __init__.py  linecoding.py  parity_generation.py  utils.py
tests/: linecoding.ipynb  testing_parity_generation.py
