[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDigital"
version = "1.1.1"
authors = [
  { name="Sanjay S", email="sanjusuresh2001@gmail.com" },
  { name="Prathish K V", email="prathishvijayakumar@gmail.com" }
]
description = "A python package intended for visualizing digital data line coding, generating parity bits and detecting errors in parity encoded binary data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.6.0",
    "numpy>=1.23.3"
]

[project.urls]
"Repository" = "https://github.com/RapidCompiler/pydigital"
"Bug Tracker" = "https://github.com/RapidCompiler/pydigital/issues"
"Documentation" = "http://pydigital-docs.readthedocs.io/"